# nhs-number

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  netlify.toml  pyproject.toml  pytest.ini  requirements.txt  runtime.txt  setup.py  tox.ini
.github/workflows/: documentation-build-deploy-ghpages.yml  github-pages-docs-publish.yml  pypi-publish.yml  test-all-branches.yml  testpypi-publish.yml
_assets/_snippets/live-usage-warning/: index.html
_assets/_snippets/scottish-chi-number/: index.html
changelog/: index.html
contributors/: index.html
developing/: index.html
docs/: changelog.md  contributors.md  developing.md  documentation.md  ihi-ireland.md  index.md  installation.md  nhs-numbers.md  usage.md  useful_urls.md
docs/_assets/_snippets/: live-usage-warning.md  scottish-chi-number.md
docs/_assets/_stylesheets/: extra.css
documentation/: index.html
ihi-ireland/: index.html
installation/: index.html
nhs-numbers/: index.html
nhs_number/: __init__.py  constants.py  details.py  generate.py  normalise.py  standardise.py  validate.py
overrides/: main.html
requirements/: development-requirements.txt
search/: search_index.json
tests/: context.py  test___init__.py  test_bulk_validation.py  test_details.py  test_generate.py  test_normalise.py  test_standardise.py  test_validate.py
tests/local-test-data/: testdata-9-valid-nhs-numbers.csv
usage/: index.html
