[tool.poetry]
name = "nhs-number"
version = "1.3.4"
description = "Python package to provide utilities for NHS Numbers, including validity checks, normalisation, and generation."
authors = [
    "Andy Law <andy.law@roslin.ed.ac.uk>",
    "Marcus Baw <marcusbaw@gmail.com>",
    ]
license = "MIT"
readme = "README.md"
packages = [{include = "nhs_number"}]
homepage = "https://nhs-number.uk-fci.tech/"
documentation = "https://nhs-number.uk-fci.tech/"
repository = "https://github.com/uk-fci/nhs-number"

exclude = ["tests/local-test-data/*"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    ]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mkdocs-material = "^9.1.15"


[tool.poetry.urls]
"Issue Tracker" = "https://github.com/uk-fci/nhs-number/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
experimental-string-processing = true
