[tool.poetry]
name = "nhs-number"
version = "1.3.6"
description = "Python package to provide utilities for NHS Numbers, including validity checks, normalisation, and generation."
authors = [
    "Andy Law <andy.law@roslin.ed.ac.uk>",
    "Marcus Baw <marcus@marcusbaw.com>",
    ]
license = "MIT"
readme = "README.md"
packages = [{include = "nhs_number"}]
homepage = "https://uk-fci.github.io/nhs-number/"
documentation = "https://uk-fci.github.io/nhs-number/"
repository = "https://github.com/uk-fci/nhs-number"

exclude = ["tests/local-test-data/*"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^23.3.0"
mkdocs-material = "^9.1.15"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/uk-fci/nhs-number/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
experimental-string-processing = true
